# rustchatpro

./: Cargo.toml  README.md  RustChatPro_Carousel_v3.html  chat.db
.github/workflows/: ci.yml
public/: RustChatPro_Carousel_v5.html
src/: client.rs  crypto.rs  db.rs  heartbeat.rs  logging.rs  main.rs  room.rs  server.rs  tests.rs  types.rs  ws_handler.rs
static/: RustChatPro_Carousel_v5.html  index.html
